app.js, app.json tabBar

--- a/app.json
+++ b/app.json
@@ -22,6 +22,8 @@
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
+    "backgroundColor":"#2e2747",
+    "color":"fff",
     "selectedColor": "#ec702e",
     "list": [
       {
